8215755: ZGC: split_barrier_thru_phi: check number of inputs of phi

Reviewed-by: pliden, thartmann